--- a/template/Cargo.toml
+++ b/template/Cargo.toml
@@ -6,12 +6,10 @@ edition = "2018"
 
 [dependencies]
 serde = { version = "1.0.101", optional = true }
-codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
-sp-runtime = { version = "2.0.0-rc6", default-features = false }
-frame-support = { version = "2.0.0-rc6", default-features = false }
-frame-system = { version = "2.0.0-rc6", default-features = false }
-runtime-io = { package = "sp-io", version = "2.0.0-rc6", default-features = false }
-rstd = { package = "sp-std", version = "2.0.0-rc6", default-features = false }
+codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
+sp-runtime = { version = "2.0.1", default-features = false }
+frame-support = { version = "2.0.1", default-features = false }
+frame-system = { version = "2.0.1", default-features = false }
 
 [features]
 default = ["std"]
@@ -21,6 +19,4 @@ std = [
 	"sp-runtime/std",
 	"frame-support/std",
 	"frame-system/std",
-	"runtime-io/std",
-	"rstd/std",
 ]
