--- a/template/Cargo.toml
+++ b/template/Cargo.toml
@@ -6,12 +6,12 @@ edition = "2018"
 
 [dependencies]
 serde = { version = "1.0.101", optional = true }
-codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
-sp-runtime = { version = "2.0.0-rc6", default-features = false }
-frame-support = { version = "2.0.0-rc6", default-features = false }
-frame-system = { version = "2.0.0-rc6", default-features = false }
-runtime-io = { package = "sp-io", version = "2.0.0-rc6", default-features = false }
-rstd = { package = "sp-std", version = "2.0.0-rc6", default-features = false }
+codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+runtime-io = { package = "sp-io", git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+rstd = { package = "sp-std", git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 
 [features]
 default = ["std"]
